; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_unl.c_unl_genl_subscribe.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_unl.c_unl_genl_subscribe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unl = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unl_genl_subscribe(%struct.unl* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.unl*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.unl* %0, %struct.unl** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.unl*, %struct.unl** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @unl_genl_multicast_id(%struct.unl* %7, i8* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load %struct.unl*, %struct.unl** %4, align 8
  %16 = getelementptr inbounds %struct.unl, %struct.unl* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @nl_socket_add_membership(i32 %17, i32 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %14, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @unl_genl_multicast_id(%struct.unl*, i8*) #1

declare dso_local i32 @nl_socket_add_membership(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
